{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 59,
  "lineage": "ef8db193-ec40-1e48-e138-2500e234f953",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473700537115:route-table/rtb-05812202d95649fc8",
            "id": "rtb-05812202d95649fc8",
            "owner_id": "473700537115",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "claims-dev-rt-private-a",
              "Owner": "infra",
              "Project": "claims"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "claims-dev-rt-private-a",
              "Owner": "infra",
              "Project": "claims"
            },
            "timeouts": null,
            "vpc_id": "vpc-0557a0e876439dfaa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473700537115:route-table/rtb-04b346f1953ceb1ea",
            "id": "rtb-04b346f1953ceb1ea",
            "owner_id": "473700537115",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "claims-dev-rt-private-b",
              "Owner": "infra",
              "Project": "claims"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "claims-dev-rt-private-b",
              "Owner": "infra",
              "Project": "claims"
            },
            "timeouts": null,
            "vpc_id": "vpc-0557a0e876439dfaa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a6547ead9edb73a",
            "route_table_id": "rtb-05812202d95649fc8",
            "subnet_id": "subnet-0903b908c58803044"
          },
          "dependencies": [
            "aws_route_table.private_a",
            "aws_subnet.private_a",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6bcd34c4951a83d",
            "route_table_id": "rtb-04b346f1953ceb1ea",
            "subnet_id": "subnet-056a30c1dccae75c3"
          },
          "dependencies": [
            "aws_route_table.private_b",
            "aws_subnet.private_b",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_indexer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473700537115:security-group/sg-0c781126b3c430c08",
            "description": "Security group for indexer Lambda",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS to AWS services via VPC endpoints",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0c781126b3c430c08",
            "ingress": [],
            "name": "claims-dev-lambda-indexer-sg",
            "name_prefix": "",
            "owner_id": "473700537115",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "claims-dev-lambda-indexer-sg",
              "Owner": "infra",
              "Project": "claims"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "claims-dev-lambda-indexer-sg",
              "Owner": "infra",
              "Project": "claims"
            },
            "timeouts": null,
            "vpc_id": "vpc-0557a0e876439dfaa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_list",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473700537115:security-group/sg-08c5b88ce26f17f22",
            "description": "Security group for list Lambda",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS to AWS services via VPC endpoints",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-08c5b88ce26f17f22",
            "ingress": [],
            "name": "claims-dev-lambda-list-sg",
            "name_prefix": "",
            "owner_id": "473700537115",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "claims-dev-lambda-list-sg",
              "Owner": "infra",
              "Project": "claims"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "claims-dev-lambda-list-sg",
              "Owner": "infra",
              "Project": "claims"
            },
            "timeouts": null,
            "vpc_id": "vpc-0557a0e876439dfaa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_presign",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473700537115:security-group/sg-0a3ce49b1bda03142",
            "description": "Security group for presign Lambda",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS to AWS services via VPC endpoints",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0a3ce49b1bda03142",
            "ingress": [],
            "name": "claims-dev-lambda-presign-sg",
            "name_prefix": "",
            "owner_id": "473700537115",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "claims-dev-lambda-presign-sg",
              "Owner": "infra",
              "Project": "claims"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "claims-dev-lambda-presign-sg",
              "Owner": "infra",
              "Project": "claims"
            },
            "timeouts": null,
            "vpc_id": "vpc-0557a0e876439dfaa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473700537115:security-group/sg-0f3c734a837175683",
            "description": "Security group for VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f3c734a837175683",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTPS from Lambda functions",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08c5b88ce26f17f22",
                  "sg-0a3ce49b1bda03142",
                  "sg-0c781126b3c430c08"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "claims-dev-vpc-endpoints-sg",
            "name_prefix": "",
            "owner_id": "473700537115",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "claims-dev-vpc-endpoints-sg",
              "Owner": "infra",
              "Project": "claims"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "claims-dev-vpc-endpoints-sg",
              "Owner": "infra",
              "Project": "claims"
            },
            "timeouts": null,
            "vpc_id": "vpc-0557a0e876439dfaa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lambda_indexer",
            "aws_security_group.lambda_list",
            "aws_security_group.lambda_presign",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473700537115:subnet/subnet-0903b908c58803044",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.42.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0903b908c58803044",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473700537115",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "claims-dev-private-a",
              "Owner": "infra",
              "Project": "claims",
              "Tier": "private"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "claims-dev-private-a",
              "Owner": "infra",
              "Project": "claims",
              "Tier": "private"
            },
            "vpc_id": "vpc-0557a0e876439dfaa"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473700537115:subnet/subnet-056a30c1dccae75c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.42.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056a30c1dccae75c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473700537115",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "claims-dev-private-b",
              "Owner": "infra",
              "Project": "claims",
              "Tier": "private"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "claims-dev-private-b",
              "Owner": "infra",
              "Project": "claims",
              "Tier": "private"
            },
            "vpc_id": "vpc-0557a0e876439dfaa"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473700537115:vpc/vpc-0557a0e876439dfaa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.42.0.0/16",
            "default_network_acl_id": "acl-0f2c0c3f72521ce4a",
            "default_route_table_id": "rtb-0a74c4b9818898147",
            "default_security_group_id": "sg-044247599b81f6a40",
            "dhcp_options_id": "dopt-954379ef",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0557a0e876439dfaa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a74c4b9818898147",
            "owner_id": "473700537115",
            "tags": {
              "Env": "dev",
              "Name": "claims-dev-vpc",
              "Owner": "infra",
              "Project": "claims"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "claims-dev-vpc",
              "Owner": "infra",
              "Project": "claims"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473700537115:vpc-endpoint/vpce-05485954b54af0726",
            "cidr_blocks": [
              "35.71.70.0/24",
              "3.218.182.0/24",
              "3.218.180.0/23",
              "35.71.68.0/23",
              "52.94.0.0/22",
              "52.119.224.0/20"
            ],
            "id": "vpce-05485954b54af0726",
            "owner_id": "473700537115",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-02cd2c6b",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-04b346f1953ceb1ea",
              "rtb-05812202d95649fc8"
            ],
            "service_name": "com.amazonaws.us-east-1.dynamodb",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Env": "dev",
              "Name": "claims-dev-vpce-dynamodb",
              "Owner": "infra",
              "Project": "claims"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "claims-dev-vpce-dynamodb",
              "Owner": "infra",
              "Project": "claims"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0557a0e876439dfaa"
          },
          "dependencies": [
            "aws_route_table.private_a",
            "aws_route_table.private_b",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473700537115:vpc-endpoint/vpce-003dc2548a0465060",
            "dns_entry": [
              {
                "dns_name": "vpce-003dc2548a0465060-km8hto80.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-003dc2548a0465060-km8hto80-us-east-1b.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-003dc2548a0465060-km8hto80-us-east-1a.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "kms.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z07955738NLOISCUHUFK"
              },
              {
                "dns_name": "kms.us-east-1.api.aws",
                "hosted_zone_id": "Z09066631RY1XE53MT0KM"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-003dc2548a0465060",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-043c4412d80264240",
              "eni-0ab4f0302de172b2f"
            ],
            "owner_id": "473700537115",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f3c734a837175683"
            ],
            "service_name": "com.amazonaws.us-east-1.kms",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.42.1.62",
                "subnet_id": "subnet-0903b908c58803044"
              },
              {
                "ipv4": "10.42.2.123",
                "subnet_id": "subnet-056a30c1dccae75c3"
              }
            ],
            "subnet_ids": [
              "subnet-056a30c1dccae75c3",
              "subnet-0903b908c58803044"
            ],
            "tags": {
              "Env": "dev",
              "Name": "claims-dev-vpce-kms",
              "Owner": "infra",
              "Project": "claims"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "claims-dev-vpce-kms",
              "Owner": "infra",
              "Project": "claims"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0557a0e876439dfaa"
          },
          "dependencies": [
            "aws_security_group.lambda_indexer",
            "aws_security_group.lambda_list",
            "aws_security_group.lambda_presign",
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473700537115:vpc-endpoint/vpce-09b7882c1e0c16ab3",
            "dns_entry": [
              {
                "dns_name": "vpce-09b7882c1e0c16ab3-hi5nu9ti.lambda.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-09b7882c1e0c16ab3-hi5nu9ti-us-east-1b.lambda.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-09b7882c1e0c16ab3-hi5nu9ti-us-east-1a.lambda.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "lambda.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z07964592VHC1S622ATE8"
              },
              {
                "dns_name": "lambda.us-east-1.api.aws",
                "hosted_zone_id": "Z025348524PZH9S245SJ3"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-09b7882c1e0c16ab3",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00e5fae044d58e41c",
              "eni-0cc3764a7c12d62dd"
            ],
            "owner_id": "473700537115",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f3c734a837175683"
            ],
            "service_name": "com.amazonaws.us-east-1.lambda",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.42.1.83",
                "subnet_id": "subnet-0903b908c58803044"
              },
              {
                "ipv4": "10.42.2.120",
                "subnet_id": "subnet-056a30c1dccae75c3"
              }
            ],
            "subnet_ids": [
              "subnet-056a30c1dccae75c3",
              "subnet-0903b908c58803044"
            ],
            "tags": {
              "Env": "dev",
              "Name": "claims-dev-vpce-lambda",
              "Owner": "infra",
              "Project": "claims"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "claims-dev-vpce-lambda",
              "Owner": "infra",
              "Project": "claims"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0557a0e876439dfaa"
          },
          "dependencies": [
            "aws_security_group.lambda_indexer",
            "aws_security_group.lambda_list",
            "aws_security_group.lambda_presign",
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473700537115:vpc-endpoint/vpce-0f214ee8e7dc6015a",
            "dns_entry": [
              {
                "dns_name": "vpce-0f214ee8e7dc6015a-g4h61yvm.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0f214ee8e7dc6015a-g4h61yvm-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0f214ee8e7dc6015a-g4h61yvm-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z02503761IQUE8XURGU62"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z09296723O7MO08UJ0ZBW"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z02503833D288SA28BBB4"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z07391671ZSA0ZL4S1U2B"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f214ee8e7dc6015a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0c4408cd840d6e262",
              "eni-0c8b60a3ea6e29575"
            ],
            "owner_id": "473700537115",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f3c734a837175683"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.42.1.163",
                "subnet_id": "subnet-0903b908c58803044"
              },
              {
                "ipv4": "10.42.2.93",
                "subnet_id": "subnet-056a30c1dccae75c3"
              }
            ],
            "subnet_ids": [
              "subnet-056a30c1dccae75c3",
              "subnet-0903b908c58803044"
            ],
            "tags": {
              "Env": "dev",
              "Name": "claims-dev-vpce-logs",
              "Owner": "infra",
              "Project": "claims"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "claims-dev-vpce-logs",
              "Owner": "infra",
              "Project": "claims"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0557a0e876439dfaa"
          },
          "dependencies": [
            "aws_security_group.lambda_indexer",
            "aws_security_group.lambda_list",
            "aws_security_group.lambda_presign",
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473700537115:vpc-endpoint/vpce-0ec29c272a690822a",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "id": "vpce-0ec29c272a690822a",
            "owner_id": "473700537115",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-04b346f1953ceb1ea",
              "rtb-05812202d95649fc8"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Env": "dev",
              "Name": "claims-dev-vpce-s3",
              "Owner": "infra",
              "Project": "claims"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "claims-dev-vpce-s3",
              "Owner": "infra",
              "Project": "claims"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0557a0e876439dfaa"
          },
          "dependencies": [
            "aws_route_table.private_a",
            "aws_route_table.private_b",
            "aws_vpc.this"
          ]
        }
      ]
    }
  ]
}